<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha=".4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirmTitle"
        style="@style/HeadingTitle"
        android:layout_marginTop="-16dp"
        android:text="@string/informasi_pembayaran"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drag_handle" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dividerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:dividerColor="?attr/colorSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmTitle" />

    <TextView
        android:id="@+id/nameTitle"
        style="@style/BodyContent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/nama_pembayar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerTitle" />

    <TextView
        android:id="@+id/nameContent"
        style="@style/BodyTitle"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameTitle"
        tools:text="Novi Dwi A" />

    <TextView
        android:id="@+id/amountTitle"
        style="@style/BodyContent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/jumlah_pembayaran"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTitle" />

    <TextView
        android:id="@+id/amountContent"
        style="@style/BodyTitle"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/amountTitle"
        tools:text="Rp. 70.000,00" />

    <TextView
        android:id="@+id/expireTitle"
        style="@style/BodyContent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/jangka_waktu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountTitle" />

    <TextView
        android:id="@+id/expireContent"
        style="@style/BodyTitle"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/expireTitle"
        tools:text="1 Bulan" />

    <TextView
        android:id="@+id/dateTitle"
        style="@style/BodyContent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/di_bayarkan_pada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expireTitle" />

    <TextView
        android:id="@+id/dateContent"
        style="@style/BodyTitle"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dateTitle"
        tools:text="4 Juni 2023" />

    <View
        android:id="@+id/dividerDash"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/divider_dash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTitle" />

    <TextView
        android:id="@+id/totalTitle"
        style="@style/BodyTitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerDash" />

    <TextView
        android:id="@+id/totalContent"
        style="@style/HeadingSubTitle"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/totalTitle"
        tools:text="Rp. 70.000,00" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        style="@style/CustomTonalButton"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/batalkan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirmButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmButton"
        style="@style/CustomFilledButton"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/konfirmasi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelButton"
        app:layout_constraintTop_toBottomOf="@+id/totalTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>